client/css/custom.less
/* ... */
/* Dockmodal style */
.dockmodal {
	bottom: initial;
	margin-bottom: -4px;
}
.dockmodal-body {
	.dockmodal-phone {
		.phone-content {
			display: table-cell;
			height: 100%;
			vertical-align: middle;
		}
		.phone-text p {
			margin-top: 25px;
		}
	}
}
.dockheader-dropdown {
	margin: -43px 0 0 9px;
	z-index: 2;
	position: fixed;
	i {
		color: #000;
	}
}
.dockmodal-header {
	background-color: #eeeeee !important;
	border-bottom: 1px solid #dedede;
	i {
		color: #000;
	}
}
.title-text {
	color: #000 !important;
	.card-id {
		padding-left: 5px;
		padding-right: 5px;
		margin-right: 5px;
		margin-top: 3px;
		background: @brand-primary;
		color: #ffffff;
		line-height: 20px;
	}
}
.dockheader-loader {
	margin: -42px 0 0 -80px;
	position: fixed;
	z-index: 2;
}
.comment-block {
	overflow: visible;
	position: relative;
}
.card-list-placeholder {
	margin-bottom: 20px;
	min-height: 40px;
	background: #eee;
	border: 1px dashed #c2c2c2;
	border-radius: 3px;
	.box-shadow(0 1px 1px rgba(0,0,0,.05));
}
.attachment-list {
	>li {
		width: 212px;
		float: left;
		margin-right: 20px;
		min-height: 240px;
		img {
			width: 100%;
			height: 150px;
		}
	}
}
.tab-content .modal-body section a {
	word-wrap: break-word;
}
.duedate {
	.form-group {
		.input-group {
			display: block;
			.input-group-addon {
				background: none;
				border: 0;
				display: block;
				width: auto;
			}
		}
		.form-control, .control-label {
			display: none;
		}
	}
}
.modal-title {
	line-height: 1.42857;
	margin: 0;
}
.splitter-wrap {
	min-height: 170px;
	float: left;
	height: auto !important;
	padding: 0 10px;
}
.editor {
	.ui-resizable-e {
		background: url(../img/split.gif)#eeeeee no-repeat center 10%;
		width: 4px;
		right: -2px;
		z-index: 2 !important;
		padding: 2px;
	}
}
div.popped-out + div + div.datetimepicker {
	left: 217.4px !important;
}
.ui-sortable-helper {
	font-smoothing: antialiased;
	.rotate(3deg);
	.transition(transform .02s ease);
	-webkit-font-smoothing: antialiased;
	-webkit-backface-visibility: hidden;
	&.panel {
		.box-shadow(0 1px 1px rgba(0,0,0,0.15));
	}
}
.datepicker-dropdown {
	&.datetimepicker-dropdown-bottom-right {
		margin-left: -60px;
		&:before {
			left: 50%;
		}
		&:after {
			left: 50.5%;
		}
	}
}
/* specific style */
.row-flex {
	display: flex;
	flex-direction: row;
	flex: 0 0 100%;
}
.col-flex {
	display: flex;
	flex-direction: column;
	&.col-flex1 {
		flex: 0 0 40%;
		overflow: hidden;
	}
	&.col-flex2 {
		flex: 0 0 80%;
	}
	&.col-flex3 {
		flex: 0 0 100%;
	}
	&.col-flex2, &.col-flex3 {
		background: none;
		.open a, a:focus {
			background: none;
		}
	}
}
.emoji {
	width: 1.5em;
	height: 1.5em;
	display: inline-block;
	margin-bottom: -0.25em;
}
.atMention {
	background: #d6dadc;
	padding: 1px 4px;
	margin: -1px 0;
}
.thumb-img {
	display: table-cell;
	line-height: 134px;
	font-size: 35px;
	font-weight: bold;
	text-align: center;
	vertical-align: middle;
	.size(202px,151px);
	color: lighten(@gray-light,20%);
	.img-responsive {
		max-height: 100%;
		display: inline-block;
	}
}
.preview-thumbnail {
	background-size: cover;
	border-radius: 3px;
	display: block;
	float: left;
	margin-right: 5px;
	margin-top: 6px;
	.opacity(0.8);
	.square(16px);
	z-index: 2;
	& + .navbar-btn {
		.btn-block {
			width: 70%;
		}
	}
}
.card-label-show {
	.htruncate {
		width: 150px;
		float: left;
	}
}
.label-block {
	.card-label-show {
		.htruncate {
			width: 110px;
		}
	}
}
.about-block {
	margin: auto;
	position: absolute;
	top: 15%;
	width: 445px;
	padding-bottom: 50px;
}
.name-block {
	background: rgba(51,51,51,0.5);
	bottom: 0;
	position: absolute;
	padding: 2px 0px;
	width: 100%;
	font-size: 9px;
	font-weight: normal;
	letter-spacing: -0.2px;
	.border-bottom-radius(4px);
	&.htruncate {
		line-height: 10px;
	}
}
.empty-block {
	background: #F3F5F7;
	border: 1px dashed #999999;
	border-radius: 3px;
	color: #000000;
	display: block;
	text-align: center;
	padding: 24px;
}
.board-close-view {
	background-color: #f3f5f7;
	border: 1px solid #eeeeee;
	border-radius: 4px;
	color: #555555;
	margin: 0 auto;
	padding: 7px 10px;
	width: 260px;
}
.animation {
	.tada-animation {
		.animated();
		.animation-name(tada);
		.animation-duration(infinite);
		.animation-timing-function(infinite);
		.animation-delay(ease);
		.animation-iteration-count(infinite);
	}
	.icon-volume-up {
		padding-right: 0;
	}
}
/* footer style */
footer {
	.dropdown-submenu {
		.dropdown-menu {
			top: auto !important;
			bottom: 0 !important;
			>li {
				.preview-thumbnail {
					margin-top: 3px;
				}
			}
		}
	}
	.navbar {
		min-height: 32px;
	}
}
footer, header, .dashboard-header {
	.nav > li > a, .btn {
		padding: 4px 7px;
	}
	.btn.icon {
		line-height: 1.2;
	}
}
.badge {
	&.notification-count {
		background: @brand-primary;
		position: absolute;
		padding: 3px 6px;
		left: 0;
		top: 0;
	}
}
.notifications {
	>.dropdown-menu {
		width: 285px;
	}
}
.notification-list {
	>ul >li {
		padding: 0;
		margin: 0;
	}
	&.notification-empty {
		display: table;
		width: 100%;
		> ul {
			display: table-cell;
			vertical-align: middle;
			text-align: center;
		}
	}
}
/* gantt style */
.gantt, .gantt2 {
	width: 100%;
	margin: 20px auto;
	border: 1px solid #ddd;
	position: relative;
	-webkit-border-radius: 6px;
	-moz-border-radius: 6px;
	border-radius: 6px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	background-color: #f3f5f7;
}
.gantt:after {
	content: ".";
	visibility: hidden;
	display: block;
	height: 0;
	clear: both;
}
/* ... */

